# banknota_md

./: .env_template  .flake8  README.md  config.py  main_test.py  main_test.py.save  pyproject.toml  report.json  report_spending_by_category.json
data/: operations.xlsx
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
