[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"

[tool.poetry]
name = "banknota_md"
version = "0.1.0"
description = "Financial transaction analyzer"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0"
requests = "^2.28"
python-dotenv = "^1.0"
openpyxl = "^3.0"
pytest = "^7.4"
python-dateutil = "^2.8"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"